2007-08-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent
	-sendEMailUsingTemplateNamed:_pageNameforOldObject:_oldObjectandNewObject:_newObjecttoAttendees:_attendees]):
	set the mail date to the current date string returned by our
	rfc822DateString extension method.

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-_gcsFoldersFromFolder:): ignore the personal folders who are
	returned but don't really exist.

2007-08-02  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView _responseForResults:]):
	has to return only one element.

2007-08-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartViewer.m ([UIxMailPartViewer
	-content]): new method returning the decoded content of the
	corresponding attachment as an NSData instance.
	([UIxMailPartViewer -filename]): if the "filename" parameter of
	the metadata parameterList is empty, try to find out the filename
	from the "disposition" metadata returned with the BODYSTRUCTURE
	imap4 tag.

	* UI/MailerUI/UIxMailMainFrame.m ([UIxMailMainFrame
	-composeAction]): prefix the INBOX folder with "folder".

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailBaseObject
	-relativeImap4Name]): return nameInContainer stripped from its
	first 6 characters since all folder names are prefixed with
	"folder".

	* SoObjects/Mailer/SOGoMailBaseObject.m ([SOGoMailBaseObject
	-imap4URLString]): invoke -relativeImap4Name instead of
	"nameInContainer" since the former will return the fixed IMAP4
	foldername and the latter the SoObject name.

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
	+initialize]): we now fetch the "BODYSTRUCTURE" key instead of "BODY".

	* SoObjects/Mailer/SOGoMailAccount.m ([SOGoMailAccount -inboxFolderNameInContext:])
	([SOGoMailAccount -draftsFolderNameInContext:_ctx])
	([SOGoMailAccount -sieveFolderNameInContext:_ctx])